selectPath guarantees no 2 relays belong to same family